--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -8,56 +8,114 @@
   transition: all 0.3s ease;
 }
 
-body {
+.App {
   overflow-x: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  background-color: #f8f9fa;
+}
+
+.first-time-gif {
+  object-fit: contain;
+  width: 100%;
+}
+
+.sidebar-main {
+  width: 250px;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 20px;
+}
+
+.sidebar {
+  width: 100%;
+  background-color: rgb(255, 255, 255);
+  list-style: none;
+  padding: 10px;
+  box-shadow: 1px 1px 10px 1px rgba(0, 0, 0, 0.185);
+  font-size: 14px;
+}
+
+.sidebar li a {
+  text-decoration: none;
+  color: #2a4b8d;
 }
 
 .search-result-container {
-  width: 100vw;
+  width: 75vw;
   height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+  padding: 0rem 3rem;
   align-items: center;
   gap: 20px;
+  background-color: #fff;
 }
 
-.search-area {
+.header {
   width: 100%;
-  height: 200px;
+  height: 100px;
   display: flex;
-  gap: 10px;
-  flex-direction: column;
   justify-content: center;
+  gap: 20px;
   align-items: center;
-  margin-top: 75px;
+  border-bottom: 2px solid skyblue;
+}
+
+.tw-logo {
+  object-fit: contain;
+  width: 150px;
+}
+
+.logo {
+  object-fit: contain;
+  width: 150px;
 }
 
 .input-container {
-  width: 100vw;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 20px;
 }
 
-.input-container input {
+.input-fields {
   width: 40%;
-  height: 30px;
-  padding: 40px;
-  font-size: 20px;
+  padding: 10px;
+  padding-left: 20px;
+  font-size: 14px;
   outline: none;
   border: 1px solid rgba(0, 0, 0, 0.637);
-  border-radius: 20px;
 }
 
-.search-area input:focus {
-  border: 1px solid transparent;
-  box-shadow: 3px 3px 10px 2px rgba(0, 0, 0, 0.25);
+.input-fields:focus {
+  border: 1px solid blue;
 }
 
-.search-area p {
-  font-size: 22px;
+.input-fields[placeholder="Result"] {
+  border-color: rgba(0, 0, 0, 0.212);
+}
+
+.submitBtn {
+  cursor: pointer;
+  background-repeat: no-repeat !important;
+  background-size: contain !important;
+  background: transparent;
+  background-image: url("./assets/search.svg");
+  width: 5%;
+  padding: 15px;
+  border: none;
+}
+
+.header p {
+  font-size: 14px;
   width: 80%;
   height: 150px;
   border: 1px solid transparent;
@@ -66,30 +124,8 @@ body {
   text-anchor: middle;
 }
 
-.search-area button {
-  cursor: pointer;
-  padding: 10px;
-  width: 250px;
-  font-size: 27px;
-  background-color: #393e46;
-  border-radius: 100px;
-  color: white;
-  border: 1px solid transparent;
-}
-
-.search-area button:hover {
-  color: #000;
-  background-color: transparent;
-  box-shadow: 3px 3px 10px 2px rgba(0, 0, 0, 0.25);
-}
-
-.search-area button:active {
-  color: white;
-  background-color: black;
-}
-
 .result-area {
-  width: 90vw;
+  width: 100%;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 20px;
@@ -101,7 +137,6 @@ body {
   padding: 20px;
   min-height: 175px;
   /* background-color: #000; */
-  border-radius: 20px;
   border: 1px solid black;
 }
 
